--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <title>Discord struttura</title>
-    <link rel="stylesheet" href="./css bonus/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- intestazione pagina -->
@@ -58,6 +58,8 @@
             </div>
 
         </section>
+
+       
 
        <!-- sezione just-chillin -->
        <section class="chillin-section">
